# eve-esi-link

./: .env.dev  .gitignore  AGENTS.md  CONTRIBUTING.MD  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  pypi-publish.yaml
dev/docs/: schema-plan.md
dev/docs/schema/: schema_docs_2026-07-21.md
dev/test-requests/: auth.json  lang.json  one-pass-one-fail.json  paged.json  params.json  post_names.json  readme  status.json  template.json
docs/: authentication.md  caching.md  concurrent-requests.md  esi-link-library-contracts.md  esi-request-package-contracts.md  index.md  installation.md  making-requests-api.md  making-requests-cli.md  rate-limiting.md  requests.md  schema-package-contracts.md
docs/api/: api_index.md
examples/: market_orders_env.py  market_orders_scratch.py
src/eve_esi_link/: __init__.py  esi_link.py  logging_config.py  samples.py  settings.py
src/eve_esi_link/cli/: __init__.py  helpers.py  main_typer.py
src/eve_esi_link/cli/examples/: __init__.py  format_json.py
src/eve_esi_link/cli/request/: __init__.py  make_group.py  run.py  run_group.py  samples.py  uuid.py  validate.py
src/eve_esi_link/cli/schema/: __init__.py  doc.py  fetch.py  fetch_changelog.py  fetch_dates.py  helpers.py
src/eve_esi_link/cli/schema/cache/: __init__.py  clear.py  doc.py  list.py  update.py
src/eve_esi_link/esi_request/: __init__.py  models.py  runtime.py  runtime_builder.py  samples.py  samples_readme.md  validate.py
src/eve_esi_link/helpers/: esi_link_factory.py  http_session_factory.py
src/eve_esi_link/schema/: fetch.py  models.py  schema_doc.py  schema_doc_2.py
src/eve_esi_link/schema/cache/: __init__.py
src/eve_esi_link/schema/helpers/: fetch.py  load_schema.py  schema_files.py
src/pfmsoft/eve_link/: __init__.py  esi_link.py  language.py  settings.py
src/pfmsoft/eve_link/cli/: helpers.py  main_typer.py
src/pfmsoft/eve_link/cli/request/: __init__.py  run.py  run_group.py  samples.py  uuid.py  validate.py
src/pfmsoft/eve_link/cli/schema/: __init__.py  doc.py  fetch.py  fetch_changelog.py  fetch_dates.py
src/pfmsoft/eve_link/cli/schema/cache/: __init__.py  clear.py  doc.py  list.py  update.py
src/pfmsoft/eve_link/esi_request/: models.py  runtime_builder.py  samples.py
src/pfmsoft/eve_link/helpers/: esi_link_factory.py  http_session_factory.py
src/pfmsoft/eve_link/schema/: __init__.py  models.py  schema_doc.py
src/pfmsoft/eve_link/schema/cache/: __init__.py  schema_cache_disk.py
src/pfmsoft/eve_link/schema/helpers/: __init__.py  fetch.py  io_format.py  schema_check.py  schema_files.py
tests/eve_esi_link/: test_esi_link.py  test_esi_link_live.py  test_logging_config.py
tests/eve_esi_link/cli/: test_helpers.py
tests/eve_esi_link/cli/request/: test_run_commands.py  test_validate_command.py
tests/eve_esi_link/cli/schema/: test_doc_commands.py  test_fetch_commands.py
tests/eve_esi_link/cli/schema/cache/: test_cache_commands.py
tests/eve_esi_link/esi_request/: test_runtime.py  test_validate.py  test_validate_additional.py
tests/eve_esi_link/helpers/: test_misc_helpers.py
tests/eve_esi_link/schema/: test_schema_files.py
tests/eve_esi_link/schema/cache/: test_cache_manager.py
tests/pfmsoft/eve_link/: test_esi_link.py  test_esi_link_live.py  test_logging_config.py
tests/pfmsoft/eve_link/cli/: test_helpers.py
tests/pfmsoft/eve_link/cli/request/: test_run_commands.py  test_validate_command.py
tests/pfmsoft/eve_link/cli/schema/: test_doc_commands.py  test_fetch_commands.py
tests/pfmsoft/eve_link/cli/schema/cache/: test_cache_commands.py
tests/pfmsoft/eve_link/esi_request/: test_runtime.py  test_validate.py  test_validate_additional.py
tests/pfmsoft/eve_link/helpers/: test_misc_helpers.py
tests/pfmsoft/eve_link/schema/: test_schema_files.py
tests/pfmsoft/eve_link/schema/cache/: test_cache_manager.py
