[project]
name = "eve-esi-link"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chad Lowe", email = "pfmsoft.dev@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx2>=2.5.0",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
    "whenever>=0.10.0",
]
# https://packaging.python.org/en/latest/specifications/license-expression/#specification
license = "MIT"
# https://packaging.python.org/en/latest/specifications/pyproject-toml/#license-files
license-files = ["LICENSE"]

[project.urls]
Documentation = "https://github.com/DonalChilde/eve-esi-link#readme"
# Documentation_rtd = "https://esi-link.readthedocs.io"
Issues = "https://github.com/DonalChilde/eve-esi-link/issues"
Source = "https://github.com/DonalChilde/eve-esi-link"

[project.scripts]
eve-link = "eve_esi_link.cli.main_typer:app"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "1 week"

[tool.pytest.ini_options]
pythonpath = "src"
log_file = "dev/pytest-logs/tests.log"
log_file_date_format = "%Y-%m-%dT%H:%M:%S.%f%z"
log_file_format = "%(asctime)s %(levelname)s:%(funcName)s: %(message)s [in %(pathname)s:%(lineno)d]"
log_file_level = "INFO"

[tool.coverage.run]
branch = true
parallel = true

[tool.ruff.lint]
select = ["B", "UP", "D",  "FIX", "I", "F401"]
# non-imperative-mood (D401)
ignore = ["D401", "D101", "D421"]
# extend-select = ["I"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
